Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121710

[Reg 6.6.0 -> 6.6.1] Aliasing to enums does not work as in Qt 6.6.0 an earlier anymore

XMLWordPrintable

    • f3bcbfd6a (dev), ec692b22e (6.7), 3a8028b39 (6.6), 444810849 (tqtc/lts-6.5), 51ab1cb09 (tqtc/lts-6.2)

      Aliasing to enums does not work as in Qt 6.6.0 and earlier anymore.

      If an alias property is referencing an enum we get an error when assigning an integer value to the enum.

      Invalid property assignment: unknown enumeration\n"  
      

      This patch provides a workaround for one of our components: https://codereview.qt-project.org/c/qt-labs/qtquickdesigner-components/+/535854
      Instead of aliasing we simply forward the property.

      See QTBUG-121710 for more details.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            thohartm Thomas Hartmann
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: