QtQml: Re-allow assigning of raw numbers to enum property aliases

This used to work and we cannot just take it away.

Amends commit 3ea55bf398412d373daab9c92b1498f45de70e96.

Pick-to: 6.6 6.5 6.2
Fixes: QTBUG-121710
Change-Id: I7f856140286bba9d49b7ed1abfdf398a65fb1962
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit f3bcbfd6a50fb7e74f4ff6714d3b3066fa74e253)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>