src/qml/qml/qqmlpropertyvalidator.cpp
@@ -364,6 +364,11 @@ QQmlError QQmlPropertyValidator::validateLiteralBinding(
         if (binding->hasFlag(QV4::CompiledData::Binding::IsResolvedEnum))
             return noError;
 
+        // TODO: For historical reasons you can assign any number to an enum property alias
+        //       This can be fixed with an opt-out mechanism, for example a pragma.
+        if (property->isAlias() && binding->isNumberBinding())
+            return noError;
+
         QString value = compilationUnit->bindingValueAsString(binding);
         QMetaProperty p = propertyCache->firstCppMetaObject()->property(property->coreIndex());
         bool ok;
