tests/auto/qml/qqmllanguage/data/aliasWriter.qml
@@ -1,0 +1,5 @@
+import QtQml
+
+AliasHolder {
+    strokeStyle: 1
+}
